# tatara-ide

./: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: addendum-framework-terminal.md  addendum-i18n-themes.md  branding.md  design-v2.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  docker.rs  dotenv.rs  editor.rs  encoding.rs  filesystem.rs  git.rs  i18n.rs  laravel.rs  lib.rs  lsp.rs  lsp_installer.rs  main.rs  profile.rs  pty.rs  search.rs  settings.rs  terminal.rs  theme.rs
src/components/: ActivityBar.tsx  Autocomplete.tsx  Breadcrumb.tsx  CommandPalette.tsx  DatabasePanel.tsx  DiagnosticsPanel.tsx  DiffViewer.tsx  DockerPanel.tsx  EditorArea.tsx  EditorCanvas.tsx  FileContextMenu.tsx  FileTree.tsx  FindReplace.tsx  GitPanel.tsx  GoToLine.tsx  HoverTooltip.tsx  ImageViewer.tsx  LaravelPanel.tsx  MarkdownPreview.tsx  Minimap.tsx  Notifications.tsx  QuickOpen.tsx  SearchPanel.tsx  SettingsPanel.tsx  ShortcutHint.tsx  Sidebar.tsx  SignatureHelp.tsx  StatusBar.tsx  TabBar.tsx  TerminalPanel.tsx  XTerminal.tsx  index.ts
src/hooks/: useAutoSave.ts  useEditorStore.ts  useI18n.ts  useKeybindings.ts  useLsp.ts  useSnippets.ts
src/i18n/locales/: en.json  ja.json
src/lib/: autocomplete.ts  brackets.ts  emmet.ts  renderer.ts  syntax.ts  tauri.ts
src/styles/: global.css
themes/syntax/: midnight.toml
themes/ui/: midnight.toml
