[package]
name = "tatara-ide"
version = "0.1.0"
description = "Rust で鍛えた、Laravel のための軽量IDE"
authors = ["icethink"]
edition = "2021"

[lib]
name = "tatara_ide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ropey = "1.6"
# tree-sitter = "0.24"
# tree-sitter-php = "0.23"
# tree-sitter-javascript = "0.23"
# tree-sitter-html = "0.23"
# tree-sitter-css = "0.23"
# portable-pty = "0.8"
# alacritty_terminal = "0.24"
# encoding_rs = "0.8"
# arboard = "3"
toml = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
