[package]
name = "tatara-ide"
version = "0.1.0"
description = "Rust で鍛えた、Laravel のための軽量IDE"
authors = ["icethink"]
edition = "2021"

[lib]
name = "tatara_ide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ropey = "1.6"
toml = "0.8"
walkdir = "2"
ignore = "0.4"
globset = "0.4"
encoding_rs = "0.8"
portable-pty = "0.8"
# tree-sitter = "0.24"
# arboard = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
